8928
The usual example:
```scala
scala> // \u000A is a nice character
<console>:8: error: not found: value is
              // \u000A is a nice character
                        ^
```
